force-app/main/default/objects/Contact/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <externalId>true</externalId>
    <label>Employee Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>