force-app/main/default/objects/Contact/fields/Has_MFA__c.field-meta.xml
<CustomField>
    <fullName>Has_MFA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has MFA</label>
    <type>Checkbox</type>
</CustomField>