force-app/main/default/objects/Contact/fields/Needs_Laptop__c.field-meta.xml
<CustomField>
    <fullName>Needs_Laptop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Laptop</label>
    <type>Checkbox</type>
</CustomField>