force-app/main/default/objects/Contact/fields/Password_Reset_Required__c.field-meta.xml
<CustomField>
    <fullName>Password_Reset_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Password Reset Required</label>
    <type>Checkbox</type>
</CustomField>