force-app/main/default/objects/Contact/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <defaultValue>&quot;standard&quot;</defaultValue>
    <label>Role Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>