force-app/main/default/objects/Contact/fields/Under_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Under_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Warranty</label>
    <type>Checkbox</type>
</CustomField>